# Intern_Apriltag

./: README.md
Apriltag/catkin_ws/src/: README.md
Apriltag/catkin_ws/src/apriltag_ros/apriltag_ros/config/: tags.yaml
Apriltag/catkin_ws/src/apriltag_ros/apriltag_ros/launch/: continuous_detection_d415.launch  continuous_detection_d435.launch
Apriltag/catkin_ws/src/apriltag_ros/apriltag_ros/src/: common_functions.cpp
Apriltag/catkin_ws/src/my_msg/: CMakeLists.txt  README.md  package.xml
Apriltag/catkin_ws/src/my_msg/msg/: detection.msg
Apriltag/catkin_ws/src/my_msg/src/: msg_pub.cpp  msg_sub.cpp
Apriltag/catkin_ws/src/print_info/: CMakeLists.txt  package.xml
Apriltag/catkin_ws/src/print_info/src/: polling_display_node.cpp
Apriltag/catkin_ws/src/realsense-ros/realsense2_camera/launch/: rs_camera_415.launch  rs_d415_and_d435.launch  rs_infrared1&2.launch
Apriltag/catkin_ws/src/test_pkg/: CMakeLists.txt  package.xml
Apriltag/catkin_ws/src/test_pkg/src/: publish.cpp  subscribe.cpp
PollingShow/: CMakeLists.txt  test_1.cpp  test_2.cpp
tf_pub_sub/: CMakeLists.txt  package.xml
tf_pub_sub/src/: pub.cpp  sub.cpp
